+ Change approach to fields path
+ Move log-browser creation to Logger
+ Trans_id can be generated in MainWindow
+ Add reversal trans_id generation with suffix _R

# v0.18
+ Stop cascade process when try to parse a file with unknown extension and file not found
+ After parsing of default file focus restored in the middle of JSON
+ Multi-license window bug
+ Reduce validation
+ datetime.utcnow is deprecated
+ Tick - ignore spec violations (Fields data manual entry mode)
+ Allow force-validation mode
+ license window acceptance bug
+ Disappearing field value when add new field
+ Expand column after field editing finished
+ Set complex fields full expanding when switch JSON mode
+ Add tabs by QTabWidget
+ Revise hotkeys in hint-window and doc
+ Console mode

+ Fix DE62 parsing error
+ Save multiple files
+ Add keys is CLI mode: --config-file --print-config
+ Tabs round by keyboard
+ Add hotkeys info: CTRL + F4, CTRL + PG-UP/PG-DOWN, Ctrl + Alt + P
+ Expand reversal window to long utrnno
+ Licence window correct exec by timer event
+ Change name to SIGNAL in Document
+ Bugs fix: incorrect bitmap representation,
• Add license info to the window "About"


• Error on console when run AboutWindow - Could not update timestamps for skipped samples
• Pin main tab and make the other movable
• Drag and drop files to JsonView
• Respect JSON-mode when set field value from complex fields constructor
• Reflect in the document - Main settings, the specification+, files format+, custom validations


• Bugs
    • Last tab bug - cannot process tab limits correctly
    + CTRL+T with tab adding works incorrectly


• Licensing preparation
    • Change the framework to pyside
    • Buy the logo
    • Gif copyright
    • Buy music
    + Change the name
    • Prepare code
    • Get Unlimit's disclaimer

• No data in socket if delete field in spec
• Exceptions policy
• Correct and publish the Specification
• Publish on confluence
• Spec explanation

• API console mode
• Undo / Redo

