@@ -20,8 +20,8 @@ class Ui_HotKeysHint(object):
         HotKeysHint.setSizePolicy(sizePolicy)
         HotKeysHint.setMinimumSize(QtCore.QSize(500, 745))
         HotKeysHint.setMaximumSize(QtCore.QSize(500, 745))
-        self.gridLayout = QtWidgets.QGridLayout(HotKeysHint)
-        self.gridLayout.setObjectName("gridLayout")
+        self.verticalLayout = QtWidgets.QVBoxLayout(HotKeysHint)
+        self.verticalLayout.setObjectName("verticalLayout")
         self.HintTable = QtWidgets.QTableWidget(parent=HotKeysHint)
         font = QtGui.QFont()
         font.setFamily("Calibri")
@@ -187,11 +187,12 @@ class Ui_HotKeysHint(object):
         self.HintTable.setItem(22, 1, item)
         self.HintTable.horizontalHeader().setVisible(True)
         self.HintTable.horizontalHeader().setCascadingSectionResizes(False)
-        self.HintTable.horizontalHeader().setDefaultSectionSize(200)
-        self.HintTable.horizontalHeader().setHighlightSections(False)
+        self.HintTable.horizontalHeader().setDefaultSectionSize(250)
+        self.HintTable.horizontalHeader().setHighlightSections(True)
+        self.HintTable.horizontalHeader().setMinimumSectionSize(50)
         self.HintTable.verticalHeader().setVisible(False)
         self.HintTable.verticalHeader().setCascadingSectionResizes(False)
-        self.gridLayout.addWidget(self.HintTable, 0, 0, 1, 1)
+        self.verticalLayout.addWidget(self.HintTable)
 
         self.retranslateUi(HotKeysHint)
         QtCore.QMetaObject.connectSlotsByName(HotKeysHint)
@@ -238,9 +239,9 @@ class Ui_HotKeysHint(object):
         item = self.HintTable.verticalHeaderItem(18)
         item.setText(_translate("HotKeysHint", "Ctrl + T"))
         item = self.HintTable.verticalHeaderItem(19)
-        item.setText(_translate("HotKeysHint", "Ctrl + PgUp"))
+        item.setText(_translate("HotKeysHint", "Ctrl + PgUp / Ctrl + Tab"))
         item = self.HintTable.verticalHeaderItem(20)
-        item.setText(_translate("HotKeysHint", "Ctrl + PgDn"))
+        item.setText(_translate("HotKeysHint", "Ctrl + PgDn /  Ctrl + Shift + Tab"))
         item = self.HintTable.verticalHeaderItem(21)
         item.setText(_translate("HotKeysHint", "Ctrl + F4"))
         item = self.HintTable.verticalHeaderItem(22)
@@ -328,11 +329,11 @@ class Ui_HotKeysHint(object):
         item = self.HintTable.item(18, 1)
         item.setText(_translate("HotKeysHint", "New tab"))
         item = self.HintTable.item(19, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + PgUp"))
+        item.setText(_translate("HotKeysHint", "Ctrl + PgUp / Ctrl + Tab"))
         item = self.HintTable.item(19, 1)
         item.setText(_translate("HotKeysHint", "Next tab"))
         item = self.HintTable.item(20, 0)
-        item.setText(_translate("HotKeysHint", "Ctrl + PgDn"))
+        item.setText(_translate("HotKeysHint", "Ctrl + PgDn /  Ctrl + Shift + Tab"))
         item = self.HintTable.item(20, 1)
         item.setText(_translate("HotKeysHint", "Previous Tab"))
         item = self.HintTable.item(21, 0)
