@@ -31,8 +31,8 @@
   <property name="windowTitle">
    <string>Hotkeys</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
     <widget class="QTableWidget" name="HintTable">
      <property name="font">
       <font>
@@ -86,10 +86,13 @@
       <bool>false</bool>
      </attribute>
      <attribute name="horizontalHeaderDefaultSectionSize">
-      <number>200</number>
+      <number>250</number>
      </attribute>
      <attribute name="horizontalHeaderHighlightSections">
-      <bool>false</bool>
+      <bool>true</bool>
+     </attribute>
+     <attribute name="horizontalHeaderMinimumSectionSize">
+      <number>50</number>
      </attribute>
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
@@ -194,12 +197,12 @@
      </row>
      <row>
       <property name="text">
-       <string>Ctrl + PgUp</string>
+       <string>Ctrl + PgUp / Ctrl + Tab</string>
       </property>
      </row>
      <row>
       <property name="text">
-       <string>Ctrl + PgDn</string>
+       <string>Ctrl + PgDn /  Ctrl + Shift + Tab</string>
       </property>
      </row>
      <row>
@@ -414,7 +417,7 @@
      </item>
      <item row="19" column="0">
       <property name="text">
-       <string>Ctrl + PgUp</string>
+       <string>Ctrl + PgUp / Ctrl + Tab</string>
       </property>
      </item>
      <item row="19" column="1">
@@ -424,7 +427,7 @@
      </item>
      <item row="20" column="0">
       <property name="text">
-       <string>Ctrl + PgDn</string>
+       <string>Ctrl + PgDn /  Ctrl + Shift + Tab</string>
       </property>
      </item>
      <item row="20" column="1">
